# PlugHome-server

./: .env  Cargo.toml  README.md
api/: Cargo.toml
api/src/: main.rs
common/: Cargo.toml
common/src/: config.rs  lib.rs  logging.rs
occp_ws/: Cargo.toml
occp_ws/src/: handlers.rs  lib.rs  main.rs  routes.rs  server.rs  state.rs  types.rs
occp_ws/tests/: ocpp_framing.rs  ocpp_ws_integration.rs
