[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread"] }
axum = { version = "0.7.5", features = ["ws", "macros"] }
chrono = "0.4.38"
anyhow = "1"
tracing = "0.1.40"
tower-http = { version = "0.5", features = ["trace"] }
occp_ws = { path = "../occp_ws" }
common = { path = "../common" }