[package]
name = "occp_ws"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread"] }
axum = { version = "0.7.5", features = ["ws", "macros"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
chrono = "0.4.38"
dotenv-linter = "3.3.0"
dotenvy_macro = "0.15.7"
rust-ocpp = { version = "1.0.0", default-features = false, features = ["v1_6"] }
futures = "0.3.30"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
headers = "0.4.0"
strum_macros = "0.26.4"
owo-colors = { version = "4.0", features = ["supports-color", "supports-colors"] }
serde = "1.0"
serde_json = "1.0"