[package]
name = "occp_ws"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread"] }
axum = { version = "0.7.5", features = ["ws", "macros"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
chrono = "0.4.38"
rust-ocpp = { version = "3.0.4", default-features = false, features = ["v1_6"] }
futures = "0.3.30"
tracing = "0.1.40"
headers = "0.4.0"
strum = "0.26.3"
strum_macros = "0.26.4"
common = { path = "../common" }
serde = "1.0"
serde_json = "1.0"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "net"] }
tokio-tungstenite = "0.24"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }